# contextmesh

./: .env  .env.example  .gitignore  DEPLOY_NOW.md  Dockerfile  LICENSE  QDRANT_URL=https7314087f-d084-4b18-.txt  deploy.sh  fly.toml  mcp_server.py  package-lock.json  package.json  robots.txt  sitemap.xml
.claude/worktrees/amazing-hypatia/.claude/: settings.local.json
api/: embedder.py  main.py  requirements.txt  vector_store.py
api/docs/: index.html
billing/: paddle_routes.py  stripe_routes.py
contextmesh/: .env.example  DNS_SETUP.md  README.md  fly.toml  mcp_server.py  pyproject.toml  pytest.ini  set_secrets.sh  set_secrets.sh.example
contextmesh/api/: .dockerignore  Dockerfile  auth.py  main.py  requirements.txt
contextmesh/dashboard/: index.html
contextmesh/docs/: index.html
contextmesh/infra/: docker-compose.yml
contextmesh/landing/: index.html
contextmesh/landing/legal/: privacy.html  refund.html  terms.html
contextmesh/sdk/: contextmesh.js  contextmesh.mjs
contextmesh/sdk/contextmesh/: __init__.py  _client.py
contextmesh/tests/: test_api.py
dashboard/: index.html
landing/: index.html
sdk/: README.md  contextmesh.js  contextmesh.mjs  contextmesh.py  pyproject.toml
sdk/contextmesh/: _client.py  _errors.py  mcp.py
tests/: conftest.py  test_mcp.py  test_sdk.py  test_vector_store.py
