[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "contextmesh"
version     = "1.0.0"
description = "Persistent semantic memory layer for AI agents"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "ContextMesh", email = "hello@contextmesh.dev" }]
requires-python = ">=3.10"

keywords = [
  "ai", "agents", "memory", "mcp", "vector", "embeddings",
  "semantic-search", "llm", "claude", "cursor", "context"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",        # mock httpx calls in tests
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage      = "https://contextmesh.dev"
Documentation = "https://docs.contextmesh.dev"
Repository    = "https://github.com/contextmesh/contextmesh"
"Bug Tracker" = "https://github.com/contextmesh/contextmesh/issues"

[project.scripts]
contextmesh-mcp = "contextmesh.mcp:main"

# ── Hatch build config ─────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["sdk/contextmesh"]

[tool.hatch.build.targets.sdist]
include = [
  "sdk/contextmesh/",
  "mcp_server.py",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

# ── Ruff (linting) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]

# ── Mypy (type checking) ───────────────────────────────────────────────────────
[tool.mypy]
python_version  = "3.10"
strict          = true
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
