[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextmesh"
version = "1.0.0"
description = "Persistent semantic memory for AI agents (Claude, Cursor, Cline, etc.)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ContextMesh", email = "hello@contextmesh.dev" }]
keywords = ["mcp", "ai", "memory", "context", "agents", "claude", "cursor", "vector", "embeddings", "semantic-search", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://contextmesh.dev"
Repository = "https://github.com/contextmesh/contextmesh-mcp"
Documentation = "https://contextmesh.dev/docs"
"Bug Tracker" = "https://github.com/contextmesh/contextmesh-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["contextmesh"]

[tool.hatch.build.targets.sdist]
include = ["contextmesh/", "README.md", "LICENSE"]
